# PG-spec-LLM-extractor

./: .env.example  .gitignore  CLAUDE.md  LICENSE  LICENSE-DATA  README.md  extract.py  pyproject.toml  requirements.txt  run_tests.sh
.github/: copilot-instructions.md
.github/agents/: data-compliance-auditor.agent.md
config/manufacturers/: advance.yaml  nova.yaml  ozone.yaml
data/: advance_enrichment_all.csv  advance_enrichment_all_by_LLM.csv  advance_year_updated_LLM_based_list.csv  dhv_unmatched.csv  dhv_unmatched_dryrun_2026-03-11.csv  manufacturers_enrichment.csv  ozone_enrichment.csv  ozone_enrichment_all_by_LLM.csv  ozone_year_updated_LLM_based_list.csv
data/audit/: dhv_gap_report.md  (+1 more)
documentation/: README.md
output/: ozone.db-shm  ozone.db-wal
prompts/: extraction-prompt-kit.md
scripts/: audit_staged_json.py  crawl_previous_to_json.py  data_curator.py  import_staged_to_db.py  patch_ozone_phase1.py  patch_staged_failures.py  recrawl_cert_fix.py  recrawl_proj_area_fix.py  show_spec_table.py
src/: benchmark.py  config.py  crawler.py  db.py  dhv_import.py  extractor.py  fredvol_import.py  markdown_parser.py  models.py  normalizer.py  pipeline.py  seed_import.py  validator.py
tests/: conftest.py  test_benchmark.py  test_config.py  test_crawler.py  test_crawler_unit.py  test_db.py  test_dhv_import.py  test_e2e.py  test_extractor.py  test_fredvol_import.py  test_import_staged.py  test_markdown_parser.py  test_models.py  test_normalizer.py  test_seed_import.py  test_validator.py  validate_advance.py  validate_ozone.py  validate_pipeline.py
(+35 files in other folders)
